--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Nep huiswerkopdracht</title>
 </head>
 <body>
-    <h2>Dit is een andere titel, die gaat niet over Pim</h2>
+<h2>Dit is een andere titel, die gaat niet over Pim</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda dolore dolorum id libero maxime obcaecati quas
+    ratione. Delectus, eaque soluta.</p>
 </body>
 </html>
