--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <h2>Dit is een andere titel, die gaat niet over Pim</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda dolore dolorum id libero maxime obcaecati quas
     ratione. Delectus, eaque soluta.</p>
+<h3>Dit is een andere titel, die gaat wel over Pim</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquid aperiam consectetur, corporis cum eius
+    harum itaque iusto minus, possimus quae repellat repellendus sapiente sit veniam. Aperiam commodi dolores eum
+    expedita iure modi, nostrum odit quia quo sed sint totam vitae. Ab cupiditate minima nobis veritatis voluptatum.
+    Deserunt, impedit, quia!</p>
 </body>
 </html>
