--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <title>Nep huiswerkopdracht</title>
 </head>
 <body>
-<h2>Dit is een andere titel, die gaat niet over Pim</h2>
+<h2>Dit is een andere titel, die gaat niet over Merci</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda dolore dolorum id libero maxime obcaecati quas
     ratione. Delectus, eaque soluta.</p>
 <h3>Dit is een andere titel, die gaat wel over Pim</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquid aperiam consectetur, corporis cum eius
-    harum itaque iusto minus, possimus quae repellat repellendus sapiente sit veniam. Aperiam commodi dolores eum
-    expedita iure modi, nostrum odit quia quo sed sint totam vitae. Ab cupiditate minima nobis veritatis voluptatum.
-    Deserunt, impedit, quia!</p>
+<p>Erg pakkende tekst</p>
 </body>
 </html>
